<resources>
    <string name="app_name">Base Converter</string>
    <string name="enter_number">Enter a Number:</string>
    <string name="number">number</string>
    <string name="enter">Enter</string>
    <string name="convert_to">Convert To:</string>
    <string name="decimal_base_converter">Decimal Base Converter</string>
    <string-array name="bases">
        <item>Base 2</item>
        <item>Base 8</item>
        <item>Base 10</item>
        <item>Base 16</item>
    </string-array>
</resources>
