<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:gravity="center"
    android:orientation="vertical"
    android:background="@color/lightGrey"
    android:descendantFocusability="beforeDescendants"
    android:focusableInTouchMode="true"
    tools:context="com.example.andy.androidproject1.MainActivity">

    <TextView
        android:id="@+id/numberbaseconverter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/decimal_base_converter"
        android:textSize="@dimen/large_text"
        android:gravity="center" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/default_layout_height"
        android:paddingStart="@dimen/input_padding"
        android:paddingEnd="@dimen/input_padding">

        <TextView
            android:id="@+id/numberinputtag"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/enter_number"
            android:gravity="center"
            android:layout_weight="1"/>

        <EditText
            android:id="@+id/numberinput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/number"
            android:gravity="center"
            android:layout_weight="1"/>

        <Spinner
            android:id="@+id/inputbase"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:layout_weight="1">
        </Spinner>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/default_layout_height"
        android:paddingStart="@dimen/input_padding"
        android:paddingEnd="@dimen/input_padding">

        <TextView
            android:id="@+id/numberoutput"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/convert_to"
            android:gravity="center"
            android:layout_weight="1"/>

        <Spinner
            android:id="@+id/outputbase"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:layout_weight="1">
        </Spinner>

    </LinearLayout>

    <Button
        android:id="@+id/enter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="false"
        android:text="@string/enter"/>

    <TextView
        android:id="@+id/result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:textColor="@color/colorPrimary"
        android:text=""
        android:focusable="true"
        android:focusableInTouchMode="true">
    </TextView>

</LinearLayout>
